ui/apps/plugins/core/feedback/style.less
/**
 * This work is provided under the terms of the CREATIVE COMMONS PUBLIC
 * LICENSE. This work is protected by copyright and/or other applicable
 * law. Any use of the work other than as authorized under this license
 * or copyright law is prohibited.
 *
 * http://creativecommons.org/licenses/by-nc-sa/2.5/
 *
 * © 2016 OX Software GmbH, Germany. info@open-xchange.com
 *
 * @author Daniel Dickhaus <daniel.dickhaus@open-xchange.com>
 */


@media all and (max-width: 480px) {
    .modal.flex[data-point="plugins/core/feedback"] {
        .modal-dialog {
            width: auto;
        }
    }
}

.rating-view {
    display: -webkit-flex;
    display: flex;

    margin: 0 0 8px 0;
    outline: 0;

    caption {
        color: @black;
        font-size: 14px;
        font-weight: bold;
    }
}

.feedback-welcome-text ,.feedback-select-box {
    margin-bottom: 8px;
}

.nps-rating {

    @score-color: #ccc;
    @score-color-checked: #3c73aa;

    justify-content: space-between;

    label {
        padding-right: 4px;
        vertical-align: top;

        .score {
            // don't make the circles too small since those are buttons as well
            font-size: 24px;
            line-height: 32px;
            cursor: pointer;
            color: @score-color;

            &.checked { color: @score-color-checked; }
        }

        .score-number {
            text-align: center;
        }
    }

    input[type="radio"]:focus + .score {
        text-shadow: 0 0 4px #000;
    }

}

.star-rating {

    @star-color: #ccc;
    @star-color-checked: #FDD835;

    label {
        vertical-align: middle;
    }

    .star {
        // don't make the stars too small since those are buttons as well
        font-size: 24px;
        line-height: 32px;
        cursor: pointer;
        color: @star-color;
        margin-right: 4px;
    }

    .checked { color: @star-color-checked; }

    caption {
        margin-left: 16px;
    }

    input[type="radio"]:focus + .star {
        text-shadow: 0 0 4px #000;
    }

}

.feedback-note {
    width: 100%;
    padding: 8px;
    margin: 0 0 16px 0;
}

.feedback-button {

    color: white;
    background-color: @topbar-background;
    z-index: 50;
    font-size: 13px;
    line-height: 32px;
    padding: 0 16px;
    text-align: center;
    white-space: nowrap;
    position: absolute;
    cursor: pointer;
    border-radius: @border-radius-base @border-radius-base 0 0;
    border: 0;

    html.high-contrast & { background-color: @hc-gray; }
}

.rightside-button {
    right: 0px;
    -webkit-transform: rotate(-90deg); /* Safari and Chrome */
    transform: rotate(-90deg);
    -webkit-transform-origin: bottom right;
    transform-origin: bottom right;
}

.leftside-button {
    right: 100%;
    -webkit-transform: rotate(90deg); /* Safari and Chrome */
    transform: rotate(90deg);
    -webkit-transform-origin: bottom right;
    transform-origin: bottom right;
    bottom: 56px;
}

