Fixed: bug 63443 - [L3] Feedback Module: Text message is not aligned properly when mouse is hovered on the rating/selecting rating icon in IE browser
(cherry picked from commit ec2bec9319179774d3866edf477145fd9fe05128)

--- a/ui/apps/plugins/core/feedback/style.less
+++ b/ui/apps/plugins/core/feedback/style.less
@@ -31,6 +31,10 @@
         color: @black;
         font-size: 14px;
         font-weight: bold;
+
+        &.IE11 {
+            width: 320px;
+        }
     }
 }
 
